src/tests/fixtures/extend_interface/addStringFieldToEnum.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlEnum */
type MyEnum = "Foo" | "Bar";

/** @gqlField */
export function greeting(myEnum: MyEnum): string {
  return `Hello ${myEnum}!`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToEnum.invalid.ts:2:1 - error: Cannot extend non-object type "MyEnum".

2 type MyEnum = "Foo" | "Bar";
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  src/tests/fixtures/extend_interface/addStringFieldToEnum.invalid.ts:5:1
    5 export function greeting(myEnum: MyEnum): string {
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6   return `Hello ${myEnum}!`;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 }
      ~
    Related location
